[tool.poetry]
name = "ts-data-extractor"
version = "0.1.0"
description = "Tool to help extract and analyze test data from the default TestStand database."
authors = ["Ahmed L Rashed <110828918+ahmedlrashed@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ts_data_extractor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyodbc = "^4.0.35"
pandas = "^2.0.0"
requests = "^2.28.2"
dash = "^2.10.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
