[tool.poetry]
name = "ts-data-extractor"
version = "1.1.0"
description = "Tool to extract and decompose test data from the default TestStand database schema into flat CSV files."
authors = ["Ahmed L Rashed <110828918+ahmedlrashed@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ts_data_extractor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyodbc = "^4.0.35"
pandas = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
